[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/SceneTrigger.gd" type="Script" id=1]
[ext_resource path="res://Assets/light.png" type="Texture" id=2]
[ext_resource path="res://Assets/LabTileset.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/DialogueProcessor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/NPCLuna.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Scene7.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Player2Rect.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 53.3563 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.8847, 28.9439 )

[node name="Scene7" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196616, 3, 0, 65527, 2, 1, 65528, 2, 2, 65529, 2, 2, 65530, 2, 2, 65531, 2, 2, 65532, 2, 2, 65533, 2, 2, 65534, 2, 2, 65535, 2, 2, 0, 2, 2, 1, 2, 2, 2, 2, 2, 3, 2, 2, 4, 2, 2, 5, 2, 2, 6, 2, 2, 7, 2, 2, 8, 2, 3 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 154.406, -38.3105 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2( -153.516, -37.4906 )
shape = SubResource( 1 )

[node name="DialogueProcessor" parent="." instance=ExtResource( 4 )]

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 10.1341, -91.3906 )
scale = Vector2( 0.850774, 0.983207 )
texture = ExtResource( 2 )
energy = 1.1
mode = 2
shadow_enabled = true
shadow_gradient_length = 50.0
shadow_filter = 3
shadow_filter_smooth = 64.0

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( -143.236, -55.229 )
scale = Vector2( 0.727653, 0.727653 )
texture = ExtResource( 2 )
energy = 1.1
mode = 2
shadow_enabled = true
shadow_gradient_length = 50.0
shadow_filter = 3
shadow_filter_smooth = 64.0

[node name="Light2D3" type="Light2D" parent="Lights"]
position = Vector2( 132.318, -91.7727 )
scale = Vector2( 0.836289, 0.836289 )
texture = ExtResource( 2 )
energy = 1.1
mode = 2
shadow_enabled = true
shadow_gradient_length = 50.0
shadow_filter = 3
shadow_filter_smooth = 64.0

[node name="NPCLuna" parent="." instance=ExtResource( 6 )]
position = Vector2( 133.842, -0.159664 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
z_index = 20
color = Color( 0, 0, 0, 1 )

[node name="Triggers" type="Node2D" parent="."]
position = Vector2( -111.222, -0.276672 )

[node name="LevelTrigger" type="StaticBody2D" parent="Triggers"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/LevelTrigger"]
position = Vector2( -1.2091, -28.4853 )
shape = SubResource( 2 )

[node name="PinPos" type="Node2D" parent="Triggers/LevelTrigger"]
position = Vector2( -0.244906, -63.5242 )

[node name="Player2" parent="." instance=ExtResource( 5 )]

[node name="Player2Rect" type="ColorRect" parent="."]
margin_left = -267.613
margin_top = -174.082
margin_right = 247.387
margin_bottom = 163.918
color = Color( 0, 0, 0, 0 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
